--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 		    </section>
 	    <footer>
 		    Press h for hyperspace
-		    Press 4 to rotate clockwise
-		    Press 5 to rotate counterclockwise
-		    Press a to accelerate
+		    Press d to rotate clockwise
+		    Press a to rotate counterclockwise
+		    Press w to accelerate
+		    Press s to deccelerate
 	    </footer>
 	</body>
 </html>
