--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		    Press a to rotate counterclockwise
 		    Press w to accelerate
 		    Press s to deccelerate
+		    Press 8 for bullets
 	    </footer>
 	</body>
 </html>
